tests/negative/regression/r4.orng
// r4.orng:5:22: error: expected a value of type `[int(0)]Float`, got a value of type `()`
// fn b () -> [0]Float { }
//                     ^
// 
fn b () -> [0]Float { }